import * as React from "react";
import { mount } from "enzyme";
import { observer } from "mobx-react";
import { bind } from "bind-decorator";
import { schemaFrom, is, length, oneOf, email, DataType, required, range } from "hyrest";
import { field, hasFields, Field } from "hyrest-mobx";

describe("fields", () => {
    describe("user / pet integration test", () => {
        class Pet {
            @is().validate(length(5, 10), required)
            public name: string;

            @is(DataType.int).validate(required, range(0, 10))
            public age: number;

            @is().validate(oneOf("cat", "dog"), required)
            public type: "cat" | "dog";
        }

        class User {
            @is().validate(length(5, 10), required)
            public name: string;

            @is().validate(email, required)
            public email: string;

            @is()
            public pet: Pet;
        }

        const ctx = {
            ownUser: User,
        };

        @observer @hasFields(() => ctx)
        class UserForm extends React.Component {
            @field(User) private user: Field<User>;

            @bind private handleChange(event: React.SyntheticEvent<HTMLInputElement>) {
                this.user.nested.email.update((event.target as HTMLInputElement).value);
            }

            public render() {
                return (
                    <div>
                        <input value={this.user.nested.email.value} onChange={this.handleChange} />
                        { this.user.nested.email.valid && <p>Valid!</p> }
                        { this.user.nested.email.invalid && <p>Invalid!</p> }
                        { this.user.nested.email.untouched && <p>Please type something!</p> }
                        { this.user.nested.email.inProgress && <p>Loading...</p> }
                    </div>
                );
            }
        }

        it("works as expected throughout a journey", async () => {
            const form = mount(<UserForm />);
            expect(form).toMatchSnapshot();

            form.find("input").simulate("change", { target: { value: "someone" }});
            expect(form).toMatchSnapshot();
            await new Promise(resolve => setTimeout(resolve));
            form.update();
            expect(form).toMatchSnapshot();

            form.find("input").simulate("change", { target: { value: "someone@example.com" }});
            expect(form).toMatchSnapshot();
            await new Promise(resolve => setTimeout(resolve));
            form.update();
            expect(form).toMatchSnapshot();
        });
    });
});
